--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,6 +113,18 @@ dev_dependencies:
   # Extension for hive.
   hive_generator: ^2.0.1
 
+  # https://pub.dev/packages/firebase_messaging
+  # A Flutter plugin to use the Firebase Cloud Messaging API.
+  firebase_messaging: ^15.1.3
+
+  # https://pub.dev/packages/flutter_local_notifications
+  # A cross platform plugin for displaying local notifications.
+  flutter_local_notifications: ^17.2.3
+
+  # https://pub.dev/packages/firebase_core
+  # A Flutter plugin to use the Firebase Core API, which enables connecting to multiple Firebase apps.
+  firebase_core: ^3.6.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
