--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,6 +37,26 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+
+    flavorDimensions "default"
+    productFlavors {
+        Development {
+            dimension "default"
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-dev"
+            resValue "string", "app_name", "Dev Project Setup"
+        }
+        Staging {
+            dimension "default"
+            applicationIdSuffix ".stag"
+            versionNameSuffix "-stag"
+            resValue "string", "app_name", "Stag Project Setup"
+        }
+        Production {
+            dimension "default"
+            resValue "string", "app_name", "Project Setup"
+        }
+    }
 }
 
 flutter {
